--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
   <!-- 登录注册区域 -->
   <div class="loginAndRegBox">
-    <div class="title-box"></div>
+    <div class="title-box">
+      
+    </div>
   </div>
 </body>
 
