--- a/login.html
+++ b/login.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="/assets/css/login1.css">
   <script src="/assets/lib/jquery.js"></script>
   <script src="/assets/lib/layui/layui.all.js"></script>
+  <script src="/assets/js/baseAPI.js"></script>
   <script src="/assets/js/login1.js"></script>
 </head>
 
@@ -45,7 +46,7 @@
           <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit>登录</button>
         </div>
         <div class="layui-form-item links">
-          <a href="javascript:;" id="link_reg">去注册账号</a>
+          <a href="javascript:;" id="link_reg">没有账号？去注册</a>
         </div>
       </form>
     </div>
