--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <dd><a href="">重置密码</a></dd>
                     </dl>
                 </li>
-                <li class="layui-nav-item"><a href="">
+                <li class="layui-nav-item"><a href="javascript:;" id="btnLogout">
                         <span class="iconfont icon-tuichu"></span>
                         退出
                     </a>
@@ -46,7 +46,7 @@
                 <div class="userinfo">
                     <img src="http://t.cn/RCzsdCq" class="layui-nav-img">
                     <span class="text-avatar">A</span>
-                    <span id="welcome">欢迎***</span>
+                    <span id="welcome">欢迎</span>
                 </div>
                 <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
                 <ul class="layui-nav layui-nav-tree" lay-shrink="all">
@@ -90,6 +90,8 @@
     </div>
     <!-- 导入layui的js文件 -->
     <script src="/assets/lib/layui/layui.all.js"></script>
+    <script src="/assets/lib/jquery.js"></script>
+    <script src="/assets/js/baseAPI.js"></script>
     <script src="/assets/js/index1.js"></script>
 </body>
 
